force-app/main/default/objects/Project__c/fields/First_Sample_due_date__c.field-meta.xml
<CustomField>
    <fullName>First_Sample_due_date__c</fullName>
    <inlineHelpText>Customer needs sample to reach them by?</inlineHelpText>
    <label>First Sample due date</label>
    <type>Date</type>
</CustomField>