force-app/main/default/objects/Project__c/fields/Flavor_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Flavor_Legal_Status__c</fullName>
    <label>Flavor Legal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>