force-app/main/default/objects/Project__c/fields/Flavour_CIU__c.field-meta.xml
<CustomField>
    <fullName>Flavour_CIU__c</fullName>
    <label>Flavour -CIU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>