force-app/main/default/objects/Project__c/fields/Flavour_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Flavour_Legal_Status__c</fullName>
    <label>Flavour Legal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>