force-app/main/default/objects/Project__c/fields/Follow_Up_Count__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Count__c</fullName>
    <label>Follow-Up Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>