force-app/main/default/objects/Project__c/fields/GMO_Status__c.field-meta.xml
<CustomField>
    <fullName>GMO_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GMO Status</label>
    <type>Checkbox</type>
</CustomField>