force-app/main/default/objects/Project__c/fields/Halal_Certification__c.field-meta.xml
<CustomField>
    <fullName>Halal_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Halal Certification</label>
    <type>Checkbox</type>
</CustomField>