force-app/main/default/objects/Project__c/fields/If_yes_Flavour_Details__c.field-meta.xml
<CustomField>
    <fullName>If_yes_Flavour_Details__c</fullName>
    <label>If yes,Flavour Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>