force-app/main/default/objects/Project__c/fields/Ingredient_Specific_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Specific_If_Any__c</fullName>
    <label>Ingredient Specific, If Any</label>
    <length>255</length>
    <type>Text</type>
</CustomField>