force-app/main/default/objects/Project__c/fields/Integration_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Product_Type__c</fullName>
    <label>Integration Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPD/SPD</fullName>
            </value>
            <value>
                <fullName>Flavours/Colors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>