force-app/main/default/objects/Project__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <displayFormat>INV-{000000}</displayFormat>
    <label>Invoice No</label>
    <type>AutoNumber</type>
</CustomField>