force-app/main/default/objects/Project__c/fields/Is_SAP__c.field-meta.xml
<CustomField>
    <fullName>Is_SAP__c</fullName>
    <formula>AND( RecordType.Name == &apos;Project&apos;,  OR( ISPICKVAL(Product_Family__c, &apos;CPD&apos;), ISPICKVAL(Product_Family__c, &apos;SPD&apos;), ISPICKVAL(Product_Family__c, &apos;PLANT BASED&apos;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SAP?</label>
    <type>Checkbox</type>
</CustomField>