force-app/main/default/objects/Project__c/fields/Is_Shipping_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Shipping_Complete__c</fullName>
    <formula>AND(
NOT(Submitted_To_SAP_Optiva__c), ISPICKVAL(Status__c, &apos;New&apos;), NOT(ISBLANK(Company_Name__c)),
NOT(ISBLANK( Contact_Number__c )), NOT(ISBLANK(City__c)), NOT(ISBLANK(Country__c)), NOT(ISBLANK(Street__c)),
NOT(ISBLANK(Postal_Code__c)), OR( AND(NOT(ISBLANK(State__c)), NOT(ISPICKVAL(Account__r.Customer_Type__c,
&apos;Export&apos;))), ISPICKVAL(Account__r.Customer_Type__c, &apos;Export&apos;) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Shipping Complete?</label>
    <type>Checkbox</type>
</CustomField>