force-app/main/default/objects/Project__c/fields/Kosher_Certification__c.field-meta.xml
<CustomField>
    <fullName>Kosher_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kosher Certification</label>
    <type>Checkbox</type>
</CustomField>