force-app/main/default/objects/Project__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>