force-app/main/default/objects/Project__c/fields/Legal_Status_as_per_Indian_FSSAI__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status_as_per_Indian_FSSAI__c</fullName>
    <label>Legal Status as per Indian FSSAI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>