force-app/main/default/objects/Project__c/fields/Main_reason_for_selecting_product__c.field-meta.xml
<CustomField>
    <fullName>Main_reason_for_selecting_product__c</fullName>
    <label>Main reason for selecting product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price within range</fullName>
            </value>
            <value>
                <fullName>Customer specific on code</fullName>
            </value>
            <value>
                <fullName>Regular product with good reviews</fullName>
            </value>
            <value>
                <fullName>Technical aspects (Solubility/Legal Status/State)</fullName>
            </value>
            <value>
                <fullName>Campaign Promotion</fullName>
            </value>
            <value>
                <fullName>New Product with great feedback</fullName>
            </value>
            <value>
                <fullName>Others (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>