force-app/main/default/objects/Project__c/fields/Matching_Target_details__c.field-meta.xml
<CustomField>
    <fullName>Matching_Target_details__c</fullName>
    <label>Matching Target details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Customer Recipe</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Rework Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>