force-app/main/default/objects/Project__c/fields/Milk_Solids__c.field-meta.xml
<CustomField>
    <fullName>Milk_Solids__c</fullName>
    <label>Milk Solids %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>