force-app/main/default/objects/Project__c/fields/Minimum_order_quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_order_quantity__c</fullName>
    <inlineHelpText>Minimum order customer will give on sampling the product/s</inlineHelpText>
    <label>Minimum order quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>