force-app/main/default/objects/Project__c/fields/Minimum_order_quantity_unit__c.field-meta.xml
<CustomField>
    <fullName>Minimum_order_quantity_unit__c</fullName>
    <label>Minimum order quantity unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>TONNE</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>