force-app/main/default/objects/Project__c/fields/Mode_Of_Courier__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Courier__c</fullName>
    <label>Mode Of Courier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>