force-app/main/default/objects/Project__c/fields/Moved_Production_date__c.field-meta.xml
<CustomField>
    <fullName>Moved_Production_date__c</fullName>
    <description>SALES ORDER RELEASE DATE</description>
    <label>Select a date for Moved Production date</label>
    <type>Date</type>
</CustomField>