force-app/main/default/objects/Project__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF( RecordType.DeveloperName= &apos;Sample&apos;,  Sample_Name__c ,  IF(RecordType.DeveloperName= &apos;Project&apos;,   Project_Name__c ,  IF(RecordType.DeveloperName= &apos;Application&apos;,    Application_Name__c , NULL) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>