force-app/main/default/objects/Project__c/fields/New_Supplier__c.field-meta.xml
<CustomField>
    <fullName>New_Supplier__c</fullName>
    <label>New Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>