force-app/main/default/objects/Project__c/fields/No_Of_Cartoons__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Cartoons__c</fullName>
    <label>No Of Cartoons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>