force-app/main/default/objects/Project__c/fields/Nutritional__c.field-meta.xml
<CustomField>
    <fullName>Nutritional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nutritional</label>
    <type>Checkbox</type>
</CustomField>