force-app/main/default/objects/Project__c/fields/of_pulp_if_with_fruit_pulp__c.field-meta.xml
<CustomField>
    <fullName>of_pulp_if_with_fruit_pulp__c</fullName>
    <label>% of pulp if with fruit pulp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>