force-app/main/default/objects/Project__c/fields/Oil_sprinkling_Dust_on__c.field-meta.xml
<CustomField>
    <fullName>Oil_sprinkling_Dust_on__c</fullName>
    <label>Oil sprinkling / Dust on %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>