force-app/main/default/objects/Project__c/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <label>Opportunity Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPD</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Sampling</fullName>
            </value>
            <value>
                <fullName>Tech Documents</fullName>
            </value>
            <value>
                <fullName>Pricing(If dev) Sampling</fullName>
            </value>
            <value>
                <fullName>application</fullName>
            </value>
            <value>
                <fullName>tech document</fullName>
            </value>
            <value>
                <fullName>pricing(if Sales)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>