force-app/main/default/objects/Project__c/fields/OPTIVA_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>OPTIVA_Customer_Code__c</fullName>
    <formula>Opportunity__r.OPTIVA_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPTIVA Customer Code</label>
    <type>Text</type>
</CustomField>