force-app/main/default/objects/Project__c/fields/OPTIVA_Recipe__c.field-meta.xml
<CustomField>
    <fullName>OPTIVA_Recipe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OPTIVA Recipe</label>
    <referenceTo>OPTIVA_Recipe__c</referenceTo>
    <relationshipLabel>Sample/Project/Applications</relationshipLabel>
    <relationshipName>Sample_Project_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>