force-app/main/default/objects/Project__c/fields/Organic_Certification__c.field-meta.xml
<CustomField>
    <fullName>Organic_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organic Certification</label>
    <type>Checkbox</type>
</CustomField>