force-app/main/default/objects/Project__c/fields/Other_Application_Methods__c.field-meta.xml
<CustomField>
    <fullName>Other_Application_Methods__c</fullName>
    <label>Other Application Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>