force-app/main/default/objects/Project__c/fields/Other_Project_Composition__c.field-meta.xml
<CustomField>
    <fullName>Other_Project_Composition__c</fullName>
    <label>Other Project Composition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>