force-app/main/default/objects/Project__c/fields/Packaging_Preference__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Preference__c</fullName>
    <inlineHelpText>Quantity to be packed in a pack</inlineHelpText>
    <label>Packaging Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>