force-app/main/default/objects/Project__c/fields/Physical_Form__c.field-meta.xml
<CustomField>
    <fullName>Physical_Form__c</fullName>
    <label>Physical Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>