force-app/main/default/objects/Project__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Shipping Postal Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>