force-app/main/default/objects/Project__c/fields/Preferred_thickness_Viscosity__c.field-meta.xml
<CustomField>
    <fullName>Preferred_thickness_Viscosity__c</fullName>
    <label>Preferred thickness/ Viscosity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>