force-app/main/default/objects/Project__c/fields/Processing_condition__c.field-meta.xml
<CustomField>
    <fullName>Processing_condition__c</fullName>
    <label>Processing condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>