force-app/main/default/objects/Project__c/fields/Product_approval_format_by_customer__c.field-meta.xml
<CustomField>
    <fullName>Product_approval_format_by_customer__c</fullName>
    <label>Product approval format by customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>