force-app/main/default/objects/Project__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>Choose the product family</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>Natural colour</fullName>
                <label>COLOR</label>
            </value>
            <value>
                <fullName>FLAVOUR</fullName>
            </value>
            <value>
                <fullName>PLANT BASED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>