force-app/main/default/objects/Project__c/fields/Product_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Product_Instruction__c</fullName>
    <label>Product Instruction</label>
    <type>TextArea</type>
</CustomField>