force-app/main/default/objects/Project__c/fields/Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Product_ID__c, Product_Code__c , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Link</label>
    <type>Text</type>
</CustomField>