force-app/main/default/objects/Project__c/fields/Product_recommended__c.field-meta.xml
<CustomField>
    <fullName>Product_recommended__c</fullName>
    <description>capture the name chosen in product master, halb code</description>
    <label>Product recommended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>