force-app/main/default/objects/Project__c/fields/Product_Spec__c.field-meta.xml
<CustomField>
    <fullName>Product_Spec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Spec</label>
    <type>Checkbox</type>
</CustomField>