force-app/main/default/objects/Project__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Emulsion</fullName>
            </value>
            <value>
                <fullName>Spray dry powder</fullName>
            </value>
            <value>
                <fullName>dry mix</fullName>
            </value>
            <value>
                <fullName>seasoning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>