force-app/main/default/objects/Project__c/fields/Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion_Date__c</fullName>
    <inlineHelpText>Updates based on completion marked by R&amp;D</inlineHelpText>
    <label>Project Completion Date</label>
    <type>Date</type>
</CustomField>