force-app/main/default/objects/Project__c/fields/Project_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Project_Quotient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Quotient</label>
    <referenceTo>Project_Quotient__c</referenceTo>
    <relationshipLabel>Sample/Project/Applications</relationshipLabel>
    <relationshipName>Sample_Project_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>