force-app/main/default/objects/Project__c/fields/Project_request_status__c.field-meta.xml
<CustomField>
    <fullName>Project_request_status__c</fullName>
    <description>read only, update from R&amp;D - SAP / OPTIVA integration
with field history</description>
    <inlineHelpText>updates from R&amp;D - SAP / OPTIVA based on project progress status updated</inlineHelpText>
    <label>Project request status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>