force-app/main/default/objects/Project__c/fields/Proposed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Cost__c</fullName>
    <label>Proposed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>