force-app/main/default/objects/Project__c/fields/Proposed_date_of_dispatch__c.field-meta.xml
<CustomField>
    <fullName>Proposed_date_of_dispatch__c</fullName>
    <inlineHelpText>By when would the customer need the sample to reach them?</inlineHelpText>
    <label>Proposed date of dispatch</label>
    <type>Date</type>
</CustomField>