force-app/main/default/objects/Project__c/fields/Proposed_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Supplier_Name__c</fullName>
    <label>Proposed Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>