force-app/main/default/objects/Project__c/fields/Prototype_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Prototype_Feedback__c</fullName>
    <label>Prototype Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modification(Modification cap at 5 times, post that sales head approval)</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>