force-app/main/default/objects/Project__c/fields/Quantity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit__c</fullName>
    <label>Quantity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>TONNE</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>