force-app/main/default/objects/Project__c/fields/Quote_Volume_in_units__c.field-meta.xml
<CustomField>
    <fullName>Quote_Volume_in_units__c</fullName>
    <label>Quote Volume (in units)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>