force-app/main/default/objects/Project__c/fields/Quotient_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quotient Mail Sent</label>
    <type>Checkbox</type>
</CustomField>