force-app/main/default/objects/Project__c/fields/R_D_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>R_D_Approval_Status__c</fullName>
    <label>R&amp;D Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>