force-app/main/default/objects/Project__c/fields/Raw_Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Raw_Material_Name__c</fullName>
    <label>Raw Material Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>