force-app/main/default/objects/Project__c/fields/Reason_for_New_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_New_Supplier__c</fullName>
    <label>Reason for New Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>