force-app/main/default/objects/Project__c/fields/Reason_for_rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_rejection__c</fullName>
    <label>Reason for rejection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor Product</fullName>
            </value>
            <value>
                <fullName>No Further requirement</fullName>
            </value>
            <value>
                <fullName>Admin Closure: Opportunity Date exceeded the Current Date</fullName>
            </value>
            <value>
                <fullName>Not In priority now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>