force-app/main/default/objects/Project__c/fields/Recipe_Cost__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Cost__c</fullName>
    <label>Recipe Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>