force-app/main/default/objects/Project__c/fields/Regulatory_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Requirements__c</fullName>
    <label>Regulatory Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>