force-app/main/default/objects/Project__c/fields/Required_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_End_Date__c</fullName>
    <inlineHelpText>How early would you want this project to be developed and connected to customer?</inlineHelpText>
    <label>Required End Date</label>
    <type>Date</type>
</CustomField>