force-app/main/default/objects/Project__c/fields/Revert_Date_Count__c.field-meta.xml
<CustomField>
    <fullName>Revert_Date_Count__c</fullName>
    <label>Revert Date Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>