force-app/main/default/objects/Project__c/fields/RM_Category__c.field-meta.xml
<CustomField>
    <fullName>RM_Category__c</fullName>
    <label>RM Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>