force-app/main/default/objects/Project__c/fields/S_O_Date__c.field-meta.xml
<CustomField>
    <fullName>S_O_Date__c</fullName>
    <description>Read only, update from R&amp;D - SAP / OPTIVA integration
with field history</description>
    <label>Select a date for S.O Date</label>
    <type>Date</type>
</CustomField>