force-app/main/default/objects/Project__c/fields/Sale_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sale_Order_Number__c</fullName>
    <label>SO Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>