force-app/main/default/objects/Project__c/fields/Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Code__c</fullName>
    <label>Sales Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>