force-app/main/default/objects/Project__c/fields/Sales_head_review__c.field-meta.xml
<CustomField>
    <fullName>Sales_head_review__c</fullName>
    <label>Sales head review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Sampling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>