force-app/main/default/objects/Project__c/fields/Sample_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Sample_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Line Item</label>
    <referenceTo>Sample_Line_Item__c</referenceTo>
    <relationshipLabel>Sample/Project/Applications</relationshipLabel>
    <relationshipName>Sample_Project_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>