force-app/main/default/objects/Project__c/fields/Sample_Name__c.field-meta.xml
<CustomField>
    <fullName>Sample_Name__c</fullName>
    <inlineHelpText>Enter sample name</inlineHelpText>
    <label>Sample Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>