force-app/main/default/objects/Project__c/fields/Sample_Project__c.field-meta.xml
<CustomField>
    <fullName>Sample_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Samples</relationshipLabel>
    <relationshipName>Sample_Project_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>