force-app/main/default/objects/Project__c/fields/Sample_Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Sample_Requested_by__c</fullName>
    <label>Sample Requested by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>